--- a/index.html
+++ b/index.html
@@ -1,45 +1,176 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Formatter</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EasyNum</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        .input, .output {
-            min-width: 300px;
-        }
+      body {
+        font-family: "Inter", sans-serif;
+      }
+      .output::placeholder {
+        color: gray;
+      }
     </style>
-</head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="p-6 bg-white rounded-lg shadow-lg">
-        <h1 class="text-xl font-semibold mb-4">Convert Number to Readable Format</h1>
-        <input type="number" id="numberInput" placeholder="Enter a number" class="input p-2 border border-gray-300 rounded-md mb-4">
-        <button onclick="formatNumber()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-            Convert
-        </button>
-        <div id="result" class="output mt-4 text-lg font-medium"></div>
+  </head>
+  <body class="bg-gray-50 flex items-center justify-center min-h-screen">
+    <div
+      class="w-full max-w-2xl mx-auto p-6 sm:p-8 bg-white rounded-xl shadow-lg space-y-4"
+    >
+      <h1 class="text-2xl font-semibold text-gray-900 mb-4">EasyNum</h1>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-end">
+        <div class="relative col-span-1">
+          <span
+            id="currencySymbol"
+            class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-500"
+            >₹</span
+          >
+          <input
+            type="number"
+            id="numberInput"
+            placeholder="Enter a number"
+            class="input w-full p-3 pl-10 border border-gray-300 rounded-md"
+            oninput="formatNumber()"
+          />
+        </div>
+        <div class="col-span-1">
+          <div
+            id="result"
+            class="output w-full p-3 border border-gray-300 rounded-md bg-gray-100"
+            placeholder="Formatted result will appear here"
+          >
+            Formatted result will appear here
+          </div>
+        </div>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div class="col-span-1">
+          <select
+            id="currencySelect"
+            class="select w-full p-3 border border-gray-300 rounded-md"
+            onchange="changeCurrency()"
+          >
+            <option value="usd">USD</option>
+            <option value="inr" selected>INR</option>
+          </select>
+        </div>
+        <div class="col-span-1">
+          <select
+            id="formatSelect"
+            class="select w-full p-3 border border-gray-300 rounded-md"
+            onchange="formatNumber()"
+          >
+            <option value="original">Original Number</option>
+            <option value="thousand">Thousands</option>
+            <option value="lakh">Lakhs</option>
+            <option value="crore" selected>Crores</option>
+            <option value="million">Millions</option>
+            <option value="billion">Billions</option>
+          </select>
+        </div>
+      </div>
+      <div class="text-right text-gray-500 text-sm mt-4">
+        Made with ❤️ by
+        <a href="https://jojit.in" class="underline">Jojit.in</a>
+      </div>
     </div>
 
     <script>
-        function convertNumberToReadableFormat(num) {
-            const crore = 10000000;
-            const lakh = 100000;
+      async function convertNumberToReadableFormat(num, format) {
+        const billion = 1000000000;
+        const million = 1000000;
+        const crore = 10000000;
+        const lakh = 100000;
+        const thousand = 1000;
 
-            if (num >= crore) {
-                return (num / crore).toFixed(2) + ' crore';
-            } else if (num >= lakh) {
-                return (num / lakh).toFixed(2) + ' lakh';
-            } else {
-                return num.toString();
-            }
+        switch (format) {
+          case "billion":
+            return num >= billion
+              ? (num / billion).toFixed(2) + " billion"
+              : num.toFixed(2);
+          case "million":
+            return num >= million
+              ? (num / million).toFixed(2) + " million"
+              : num.toFixed(2);
+          case "crore":
+            return num >= crore
+              ? (num / crore).toFixed(2) + " crore"
+              : num.toFixed(2);
+          case "lakh":
+            return num >= lakh
+              ? (num / lakh).toFixed(2) + " lakh"
+              : num.toFixed(2);
+          case "thousand":
+            return num >= thousand
+              ? (num / thousand).toFixed(2) + " thousand"
+              : num.toFixed(2);
+          default:
+            return num.toFixed(2);
+        }
+      }
+
+      async function convertCurrency(amount, fromCurrency, toCurrency) {
+        try {
+          const response = await fetch(
+            `https://cdn.jsdelivr.net/npm/@fawazahmed0/currency-api@2024-04-26/v1/currencies/${fromCurrency}.json`,
+          );
+          const data = await response.json();
+          const rate = data[fromCurrency][toCurrency];
+          const amountInCurrency = (amount * rate).toFixed(2);
+          return {
+            rate,
+            amount: amountInCurrency,
+            symbol: toCurrency === "usd" ? "$" : "₹",
+          };
+        } catch (error) {
+          console.error("Error fetching exchange rates:", error);
+          return { rate: 1, amount: amount, symbol: "" };
+        }
+      }
+
+      async function formatNumber() {
+        const num =
+          parseFloat(document.getElementById("numberInput").value) || 0;
+        const format = document.getElementById("formatSelect").value;
+        const currency = document.getElementById("currencySelect").value;
+
+        const formattedNumber = await convertNumberToReadableFormat(
+          num,
+          format,
+        );
+
+        let convertedAmount;
+        if (currency === "usd") {
+          convertedAmount = await convertCurrency(num, "usd", "inr");
+        } else {
+          convertedAmount = await convertCurrency(num, "inr", "usd");
         }
 
-        function formatNumber() {
-            const num = document.getElementById('numberInput').value;
-            const formattedNumber = convertNumberToReadableFormat(parseFloat(num));
-            document.getElementById('result').textContent = formattedNumber;
+        const formattedConvertedAmount = await convertNumberToReadableFormat(
+          parseFloat(convertedAmount.amount),
+          format,
+        );
+
+        document.getElementById("result").textContent =
+          `${convertedAmount.symbol}${formattedConvertedAmount} (${currency === "usd" ? "$" : "₹"}${formattedNumber})`;
+      }
+
+      function changeCurrency() {
+        const currency = document.getElementById("currencySelect").value;
+        const currencySymbol = document.getElementById("currencySymbol");
+        const formatSelect = document.getElementById("formatSelect");
+
+        if (currency === "usd") {
+          currencySymbol.textContent = "$";
+          formatSelect.value = "million";
+        } else if (currency === "inr") {
+          currencySymbol.textContent = "₹";
+          formatSelect.value = "crore";
         }
+
+        formatNumber();
+      }
     </script>
-</body>
+  </body>
 </html>
