feat: added meta tags and favicon for improved SEO and branding

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EasyNum</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>EasyNum - Convert and Format Numbers with Ease</title>
+    <meta name="description" content="EasyNum is a simple and efficient tool to convert and format numbers into readable formats with support for multiple currencies and number formats.">
+    <link rel="icon" href="./public/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="EasyNum - Convert and Format Numbers with Ease">
+    <meta property="og:description" content="EasyNum is a simple and efficient tool to convert and format numbers into readable formats with support for multiple currencies and number formats.">
+    <meta property="og:image" content="https://i.imgur.com/xZJpMhP.png">
+    <meta property="og:url" content="https://jojit.in/EasyNum">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Playwrite+SK:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
         font-family: "Inter", sans-serif;
@@ -42,6 +47,7 @@
       }
     </style>
   </head>
+
 
   <body
     class="bg-gray-50 flex items-center justify-center min-h-screen indie-flower-regular"
