--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
         font-family: "Indie Flower", cursive;
       }
     </style>
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "muae4tp5es");
+    </script>
   </head>
 
   <body class="bg-gray-50 flex items-center justify-center min-h-screen indie-flower-regular p-4">
