--- a/index.html
+++ b/index.html
@@ -79,6 +79,33 @@
 
   <body class="bg-gray-50 flex items-center justify-center min-h-screen indie-flower-regular p-4">
     <div class="w-full max-w-2xl mx-auto p-6 sm:p-8 bg-white rounded-xl shadow-lg space-y-4">
+      <!-- Beta Notice -->
+      <div
+        class="px-4 py-3 bg-gray-100 rounded-lg shadow-sm text-gray-800 mb-4 flex items-center justify-between"
+        role="alert"
+        id="alert"
+      >
+        <div class="flex items-center">
+          <span>The site is in beta; full currency support is coming soon. </span>
+        </div>
+        <button class="text-gray-400 hover:text-gray-500 focus:outline-none" onclick="closeAlert()">
+          <svg
+            class="h-6 w-6"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M6 18L18 6M6 6l12 12"
+            ></path>
+          </svg>
+        </button>
+      </div>
+
       <h1 class="text-2xl font-semibold text-gray-900 mb-4">EasyNum</h1>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-end">
         <div class="relative col-span-1">
@@ -242,5 +269,6 @@
 
     <script src="./easyNum.js"></script>
     <script src="./support.js"></script>
+    <script src="./common.js"></script>
   </body>
 </html>
