--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
             class="select w-full p-3 border border-gray-300 rounded-md"
             onchange="changeCurrency()"
           >
-            <option value="usd">USD</option>
-            <option value="inr" selected>INR</option>
+            <option value="USD">USD</option>
+            <!-- <option value="inr" selected>INR</option> -->
           </select>
         </div>
         <div class="col-span-1">
@@ -158,6 +158,15 @@
             <option value="auto" selected>Auto</option>
           </select>
         </div>
+      </div>
+      <div class="flex items-center mb-4">
+        <input
+          id="showAllCurrencies"
+          type="checkbox"
+          class="mr-2 h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
+          onchange="toggleCurrencyOptions()"
+        />
+        <label for="showAllCurrencies" class="text-sm text-gray-700">Show all currencies</label>
       </div>
       <div class="text-right text-gray-500 text-sm mt-4">
         Made with ❤️ by
@@ -270,5 +279,6 @@
     <script src="./easyNum.js"></script>
     <script src="./support.js"></script>
     <script src="./common.js"></script>
+    <script src="./currency.js"></script>
   </body>
 </html>
