--- a/index.html
+++ b/index.html
@@ -2,283 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EasyNum - Convert and Format Numbers with Ease</title>
-    <meta
-      name="description"
-      content="EasyNum is a simple and efficient tool to convert and format numbers into readable formats with support for multiple currencies and number formats."
-    />
-    <link rel="icon" href="./public/favicon.ico" type="image/x-icon" />
+
+    <!-- Basic Meta Tags -->
+    <meta name="description" content="EasyNum is a simple and efficient tool to convert and format numbers into readable formats with support for multiple currencies and number formats." />
+    <meta name="keywords" content="number converter, currency formatter, financial tools, number formatting" />
+    <meta name="author" content="Jojit Thomas" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://easynum.jojit.in/" />
     <meta property="og:title" content="EasyNum - Convert and Format Numbers with Ease" />
-    <meta
-      property="og:description"
-      content="EasyNum is a simple and efficient tool to convert and format numbers into readable formats with support for multiple currencies and number formats."
-    />
-    <meta property="og:image" content="https://i.imgur.com/xZJpMhP.png" />
-    <meta property="og:url" content="https://jojit.in/EasyNum" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playwrite+PL:wght@100..400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playwrite+SK:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      body {
-        font-family: "Inter", sans-serif;
-      }
-      .output::placeholder {
-        color: gray;
-        font-family: "Indie Flower", cursive;
-      }
-      .indie-flower-regular {
-        font-family: "Indie Flower", cursive;
-        font-weight: 400;
-      }
-      .roboto-regular {
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-      }
-      .roboto-value {
-        font-family: "Roboto", sans-serif;
-      }
-      .indie-placeholder {
-        font-family: "Indie Flower", cursive;
-      }
-    </style>
-    <script type="text/javascript">
-      (function (c, l, a, r, i, t, y) {
-        c[a] =
-          c[a] ||
-          function () {
-            (c[a].q = c[a].q || []).push(arguments);
-          };
-        t = l.createElement(r);
-        t.async = 1;
-        t.src = "https://www.clarity.ms/tag/" + i;
-        y = l.getElementsByTagName(r)[0];
-        y.parentNode.insertBefore(t, y);
-      })(window, document, "clarity", "script", "muae4tp5es");
-    </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L65EH2H6SV"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+    <meta property="og:description" content="EasyNum is a simple and efficient tool to convert and format numbers into readable formats with support for multiple currencies and number formats." />
+    <meta property="og:image" content="https://easynum.jojit.in/og-image.png" />
 
-      gtag("config", "G-L65EH2H6SV");
-    </script>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://easynum.jojit.in/" />
+    <meta property="twitter:title" content="EasyNum - Convert and Format Numbers with Ease" />
+    <meta property="twitter:description" content="EasyNum is a simple and efficient tool to convert and format numbers into readable formats with support for multiple currencies and number formats." />
+    <meta property="twitter:image" content="https://easynum.jojit.in/twitter-image.png" />
   </head>
-
-  <body class="bg-gray-50 flex items-center justify-center min-h-screen indie-flower-regular p-4">
-    <div class="w-full max-w-2xl mx-auto p-6 sm:p-8 bg-white rounded-xl shadow-lg space-y-4">
-      <!-- Beta Notice -->
-      <div
-        class="px-4 py-3 bg-gray-100 rounded-lg shadow-sm text-gray-800 mb-4 flex items-center justify-between"
-        role="alert"
-        id="alert"
-      >
-        <div class="flex items-center">
-          <span>The site is in beta; full currency support is coming soon. </span>
-        </div>
-        <button class="text-gray-400 hover:text-gray-500 focus:outline-none" onclick="closeAlert()">
-          <svg
-            class="h-6 w-6"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M6 18L18 6M6 6l12 12"
-            ></path>
-          </svg>
-        </button>
-      </div>
-
-      <h1 class="text-2xl font-semibold text-gray-900 mb-4">EasyNum</h1>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-end">
-        <div class="relative col-span-1">
-          <span
-            id="currencySymbol"
-            class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-500"
-            >₹</span
-          >
-          <input
-            type="number"
-            id="numberInput"
-            placeholder="Enter a number"
-            class="input w-full p-3 pl-10 border border-gray-300 rounded-md placeholder-indie-flower-regular"
-            oninput="formatNumber()"
-          />
-        </div>
-        <div class="col-span-1">
-          <div
-            id="result"
-            class="output w-full p-3 border border-gray-300 rounded-md bg-gray-100 indie-flower-regular"
-            placeholder="Formatted result will appear here"
-          >
-            Formatted result will appear here
-          </div>
-        </div>
-      </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div class="col-span-1">
-          <select
-            id="currencySelect"
-            class="select w-full p-3 border border-gray-300 rounded-md"
-            onchange="changeCurrency()"
-          >
-            <option value="USD">USD</option>
-            <!-- <option value="inr" selected>INR</option> -->
-          </select>
-        </div>
-        <div class="col-span-1">
-          <select
-            id="formatSelect"
-            class="select w-full p-3 border border-gray-300 rounded-md"
-            onchange="formatNumber()"
-          >
-            <option value="original">Original Number</option>
-            <option value="thousand">Thousands</option>
-            <option value="lakh">Lakhs</option>
-            <option value="crore">Crores</option>
-            <option value="million">Millions</option>
-            <option value="billion">Billions</option>
-            <option value="auto" selected>Auto</option>
-          </select>
-        </div>
-      </div>
-      <div class="flex items-center mb-4">
-        <input
-          id="showAllCurrencies"
-          type="checkbox"
-          class="mr-2 h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
-          onchange="toggleCurrencyOptions()"
-        />
-        <label for="showAllCurrencies" class="text-sm text-gray-700">Show all currencies</label>
-      </div>
-      <div class="text-right text-gray-500 text-sm mt-4">
-        Made with ❤️ by
-        <a href="https://jojit.in" class="underline">Jojit.in</a>
-      </div>
-    </div>
-
-    <!-- Support Chat Button -->
-    <div class="fixed bottom-4 right-4 z-50">
-      <button
-        id="supportButton"
-        class="bg-blue-500 text-white px-4 py-2 rounded-lg shadow-lg hover:bg-blue-600 transition duration-300"
-      >
-        Chat
-      </button>
-    </div>
-
-    <!-- Support Chat Container (hidden by default) -->
-    <div
-      id="supportChatContainer"
-      class="fixed bottom-0 left-0 right-0 bg-white rounded-t-xl z-50 transform translate-y-full transition-transform duration-300"
-    >
-      <div
-        class="bg-blue-500 text-white py-2 px-4 font-semibold rounded-t-lg flex justify-between items-center"
-      >
-        <span>Support Chat</span>
-        <button id="closeButton" class="text-white hover:text-gray-300 focus:outline-none">
-          <svg
-            class="h-6 w-6"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M6 18L18 6M6 6l12 12"
-            ></path>
-          </svg>
-        </button>
-      </div>
-      <div class="p-4">
-        <p class="text-gray-800">Welcome! How can we assist you today?</p>
-        <!-- Add chat history if needed -->
-        <div class="mt-4">
-          <input
-            id="name"
-            type="text"
-            placeholder="Your Name"
-            class="w-full border border-gray-300 rounded-full py-2 px-4 mb-2"
-          />
-          <input
-            id="email"
-            type="email"
-            placeholder="Your Email"
-            class="w-full border border-gray-300 rounded-full py-2 px-4 mb-2"
-          />
-          <input
-            id="message"
-            type="text"
-            placeholder="Type your message..."
-            class="w-full border border-gray-300 rounded-full py-2 px-4 mb-2"
-          />
-          <button
-            id="sendButton"
-            class="w-full bg-blue-500 text-white px-4 py-2 rounded-full hover:bg-blue-600 transition duration-300"
-          >
-            Send
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Backdrop for Modal -->
-    <div
-      id="backdrop"
-      class="fixed top-0 left-0 w-full h-full bg-black opacity-50 z-40 hidden"
-    ></div>
-
-    <!-- Success Modal -->
-    <div
-      id="successModal"
-      class="fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white p-6 rounded-lg shadow-lg z-50 hidden"
-    >
-      <p class="text-green-500">Support request sent successfully!</p>
-      <button
-        id="closeSuccessModal"
-        class="mt-4 bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition duration-300"
-      >
-        Close
-      </button>
-    </div>
-
-    <!-- Error Modal -->
-    <div
-      id="errorModal"
-      class="fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white p-6 rounded-lg shadow-lg z-50 hidden"
-    >
-      <p class="text-red-500">Failed to send support request. Please try again later.</p>
-      <button
-        id="closeErrorModal"
-        class="mt-4 bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition duration-300"
-      >
-        Close
-      </button>
-    </div>
-
-    <script src="./easyNum.js"></script>
-    <script src="./support.js"></script>
-    <script src="./common.js"></script>
-    <script src="./currency.js"></script>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
