feat: Add Google Analytics tracking
Adds Google Analytics tracking to the site to collect usage data. This will help us understand how users are interacting with the site and make improvements based on that data.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     <meta property="twitter:title" content="EasyNum - Convert and Format Numbers with Ease" />
     <meta property="twitter:description" content="EasyNum is a simple and efficient tool to convert and format numbers into readable formats with support for multiple currencies and number formats." />
     <meta property="twitter:image" content="https://easynum.jojit.in/twitter-image.png" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L65EH2H6SV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-L65EH2H6SV");
+    </script>
   </head>
   <body>
     <div id="root"></div>
